Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/Solution.object
<CustomObject>
    <fields>
        <fullName>EDY_ORGCUSTOM__DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_SolutionName__c</fullName>
        <label>Old Solution Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_SolutionNote__c</fullName>
        <label>Old Solution Note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Global__c</fullName>
        <label>Applicable Region</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia-Pac</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <description>Not visible to cusotmers</description>
        <inlineHelpText>This information is not visible to the customers in Portal\</inlineHelpText>
        <label>Internal Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Audience__c</fullName>
        <label>Primary Audience</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Technician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre Sales Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Engineer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solution_Expiration_Date__c</fullName>
        <label>Solution Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Solutions</relationshipLabel>
        <relationshipName>Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf4twitter__TwitterId__c</fullName>
        <externalId>true</externalId>
        <label>TwitterId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Summary__c</fullName>
        <label>Twitter Summary</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllReviewedSolutions</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS_CODE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Reviewed Solutions</label>
    </listViews>
    <listViews>
        <fullName>AllUnreviewedSolutions</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS_CODE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Unreviewed Solutions</label>
    </listViews>
</CustomObject>